# NetMonitor

./: .editorconfig  CHANGELOG.md  README-DEV.MD  README.md  api.py  app.py  cli.py  db_module.py  monitor.py  mypy.ini  network_monitor.db  ping_module.py  pyproject.toml  pytest.ini  stats.py  testtabeli.py
.config/: ruff.toml
.github/workflows/: pr-checker.yml  release.yml
src/my_project/: app.py  cli.py  db_module.py  dummy.py  monitor.py  ping_module.py  stats.py  testtabeli.py
templates/: report.html
tests/my_project/: test_dummy.py
