[project]
name = "MyProject"
description = "My project description"
version = "0.1.0-dev"
authors = [
    { name = "KRunchPL", email = "krunchfrompoland@gmail.com" },
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "flask>=3.1.0",
    "ping3>=4.0.8",
]

[project.urls]
homepage = "https://github.com/KRunchPL/my-project"
repository = "https://github.com/KRunchPL/my-project"
documentation = "https://github.com/KRunchPL/my-project"

[tool.hatch.build.targets.wheel]
packages = [
    "src/my_project",
]

[dependency-groups]
dev = [
    "darglint >=1.8.1,<2",
    "flake8 >=7.1.2,<8",
    "mypy >=1.15.0,<1.16.0",
    "pytest >=8.3.5,<9",
    "pytest-cov >=6.0.0,<7",
    "pytest-mock >=3.14.0,<4",
    "ruff >=0.11.2,<0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
